related\segment was duplicating ECS field  network.name, so remove related.segment

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -111,6 +111,7 @@ event.severity=db:event.severity;group:malcolm;kind:integer;friendly:Severity;he
 event.severity_tags=db:event.severity_tags;group:malcolm;kind:termfield;friendly:Severity Tags;help:Severity Tags
 network.direction=db:network.direction;group:malcolm;kind:termfield;friendly:Direction;help:Direction
 network.inner.vlan.id=db:network.inner.vlan.id;group:malcolm;kind:integer;friendly:Inner VLAN ID;help:Inner VLAN ID
+network.name=db:network.name;group:malcolm;kind:termfield;friendly:Network Name;help:Network Name
 network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Service;help:Service
 network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
 network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
@@ -124,7 +125,6 @@ related.manufacturer=db:related.manufacturer;group:malcolm;kind:termfield;friend
 related.oui=db:related.oui;group:malcolm;kind:termfield;friendly:Related OUI;help:Related OUI
 related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
 related.role=db:related.role;group:malcolm;kind:termfield;friendly:Related Role;help:Related Role
-related.segment=db:related.segment;group:malcolm;kind:termfield;friendly:Related Segment;help:Related Segment
 related.service=db:related.service;group:malcolm;kind:termfield;friendly:Related Service;help:Related Service
 related.site=db:related.site;group:malcolm;kind:termfield;friendly:Related Site;help:Related Site
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
@@ -2140,7 +2140,7 @@ n_netbox_device_originator=require:source.device.id;title:NetBox Device (Origina
 n_netbox_device_responder=require:destination.device.id;title:NetBox Device (Responder);fields:destination.device.cluster,destination.device.device_type,destination.device.id,destination.device.manufacturer,destination.device.name,destination.device.role,destination.device.service,destination.device.site,destination.device.url
 n_netbox_segment_originator=require:source.segment.id;title:NetBox Segment (Originator);fields:source.segment.id,source.segment.name,source.segment.site,source.segment.tenant,source.segment.url
 n_netbox_segment_responder=require:destination.segment.id;title:NetBox Segment (Responder);fields:destination.segment.id,destination.segment.name,destination.segment.site,destination.segment.tenant,destination.segment.url
-n_netbox_z_related=require:related.site;title:NetBox Related;fields:related.site,related.segment,related.manufacturer,related.device_type,related.role,related.service
+n_netbox_z_related=require:related.site;title:NetBox Related;fields:related.site,network.name,related.manufacturer,related.device_type,related.role,related.service
 o_zeek_bacnet=require:zeek.bacnet;title:Zeek bacnet.log;fields:zeek.bacnet.bvlc_function,zeek.bacnet.pdu_type,zeek.bacnet.pdu_service,zeek.bacnet.invoke_id,zeek.bacnet.result_code
 o_zeek_bacnet_discovery=require:zeek.bacnet_discovery;title:Zeek bacnet_discovery.log;fields:zeek.bacnet_discovery.pdu_service,zeek.bacnet_discovery.object_type,zeek.bacnet_discovery.instance_number,zeek.bacnet_discovery.vendor,zeek.bacnet_discovery.range,zeek.bacnet_discovery.range_low,zeek.bacnet_discovery.range_high,zeek.bacnet_discovery.object_name
 o_zeek_bacnet_property=require:zeek.bacnet_property;title:Zeek bacnet_property.log;fields:zeek.bacnet_property.pdu_service,zeek.bacnet_property.object_type,zeek.bacnet_property.instance_number,zeek.bacnet_property.property,zeek.bacnet_property.array_index,zeek.bacnet_property.value
