--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -530,7 +530,7 @@ filter {
     }
   }
 
-  # collect site, segment, role, manufacturer and device_type in related
+  # collect site, role, manufacturer and device_type in "related." segment is merged as network.name in 20_enriched_to_ecs.conf
   if ([source][device][site])              { mutate { id => "mutate_merge_source_device_site_related"
                                                        merge => { "[related][site]" => "[source][device][site]" } } }
   if ([destination][device][site])         { mutate { id => "mutate_merge_destination_device_site_related"
@@ -539,10 +539,6 @@ filter {
                                                       merge => { "[related][site]" => "[source][segment][site]" } } }
   if ([destination][segment][site])        { mutate { id => "mutate_merge_destination_segment_site_related"
                                                       merge => { "[related][site]" => "[destination][segment][site]" } } }
-  if ([source][segment][name])             { mutate { id => "mutate_merge_source_segment_name_related"
-                                                      merge => { "[related][segment]" => "[source][segment][name]" } } }
-  if ([destination][segment][name])        { mutate { id => "mutate_merge_destination_segment_name_related"
-                                                      merge => { "[related][segment]" => "[destination][segment][name]" } } }
   if ([source][device][role])              { mutate { id => "mutate_merge_source_device_role_related"
                                                       merge => { "[related][role]" => "[source][device][role]" } } }
   if ([destination][device][role])         { mutate { id => "mutate_merge_destination_device_role_related"
