--- a/nginx/nginx_readonly.conf
+++ b/nginx/nginx_readonly.conf
@@ -45,6 +45,10 @@ http {
     server dashboards-helper:28991;
   }
 
+  upstream netbox {
+    server netbox:8080;
+  }
+
   upstream extracted-file-http-server {
     server file-monitor:8440;
   }
@@ -129,6 +133,18 @@ http {
       proxy_pass http://extracted-file-http-server$1;
       proxy_redirect off;
       proxy_set_header Host file-monitor.malcolm.local;
+    }
+
+    # netbox
+    location /netbox {
+      limit_except GET { deny all; }
+      proxy_pass http://netbox;
+      proxy_redirect off;
+      proxy_set_header Host netbox.malcolm.local;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header X-Remote-Auth $authenticated_user;
     }
 
     # favicon, logos, banners, etc.
