--- a/.dockerignore
+++ b/.dockerignore
@@ -10,6 +10,7 @@
 **/.ldap_config_defaults
 **/htpasswd
 **/malcolm_*images.tar.gz
+**/malcolm_netbox_backup_*.psql.gz
 **/.envrc
 **/.direnv
 **/.opensearch*.curlrc
