Fix idaholab/Malcolm#146; normalize modbus fields better and improvements to modbus dashboard

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -671,7 +671,6 @@ zeek.modbus.exception=db:zeek.modbus.exception;group:zeek_modbus;kind:termfield;
 # modbus_detailed.log
 # https://github.com/cisagov/ICSNPP
 zeek.modbus_detailed.unit_id=db:zeek.modbus_detailed.unit_id;group:zeek_modbus;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
-zeek.modbus_detailed.func=db:zeek.modbus_detailed.func;group:zeek_modbus;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
 zeek.modbus_detailed.network_direction=db:zeek.modbus_detailed.network_direction;group:zeek_modbus;kind:termfield;friendly:Request or Response;help:Request or Response
 zeek.modbus_detailed.address=db:zeek.modbus_detailed.address;group:zeek_modbus;kind:integer;friendly:Starting Memory Address;help:Starting Memory Address
 zeek.modbus_detailed.quantity=db:zeek.modbus_detailed.quantity;group:zeek_modbus;kind:integer;friendly:Number of Values;help:Number of Values
@@ -679,18 +678,11 @@ zeek.modbus_detailed.values=db:zeek.modbus_detailed.values;group:zeek_modbus;kin
 
 # modbus_mask_write_register.log
 # https://github.com/cisagov/ICSNPP
-zeek.modbus_mask_write_register.unit_id=db:zeek.modbus_mask_write_register.unit_id;group:zeek_modbus;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
-zeek.modbus_mask_write_register.func=db:zeek.modbus_mask_write_register.func;group:zeek_modbus;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
-zeek.modbus_mask_write_register.network_direction=db:zeek.modbus_mask_write_register.network_direction;group:zeek_modbus;kind:termfield;friendly:Request or Response;help:Request or Response
-zeek.modbus_mask_write_register.address=db:zeek.modbus_mask_write_register.address;group:zeek_modbus;kind:integer;friendly:Starting Memory Address;help:Starting Memory Address
 zeek.modbus_mask_write_register.and_mask=db:zeek.modbus_mask_write_register.and_mask;group:zeek_modbus;kind:integer;friendly:Boolean AND mask to apply to target register;help:Boolean AND mask to apply to target register
 zeek.modbus_mask_write_register.or_mask=db:zeek.modbus_mask_write_register.or_mask;group:zeek_modbus;kind:integer;friendly:Boolean OR mask to apply to target register;help:Boolean OR mask to apply to target register
 
 # modbus_read_write_multiple_registers.log
 # https://github.com/cisagov/ICSNPP
-zeek.modbus_read_write_multiple_registers.unit_id=db:zeek.modbus_read_write_multiple_registers.unit_id;group:zeek_modbus;kind:integer;friendly:Unit/Server ID;help:Unit/Server ID
-zeek.modbus_read_write_multiple_registers.func=db:zeek.modbus_read_write_multiple_registers.func;group:zeek_modbus;kind:termfield;friendly:Modbus Function Code;help:Modbus Function Code
-zeek.modbus_read_write_multiple_registers.network_direction=db:zeek.modbus_read_write_multiple_registers.network_direction;group:zeek_modbus;kind:termfield;friendly:Request or Response;help:Request or Response
 zeek.modbus_read_write_multiple_registers.write_start_address=db:zeek.modbus_read_write_multiple_registers.write_start_address;group:zeek_modbus;kind:integer;friendly:Starting address of the registers to write to;help:Starting address of the registers to write to
 zeek.modbus_read_write_multiple_registers.write_registers=db:zeek.modbus_read_write_multiple_registers.write_registers;group:zeek_modbus;kind:termfield;friendly:Register values written;help:Register values written
 zeek.modbus_read_write_multiple_registers.read_start_address=db:zeek.modbus_read_write_multiple_registers.read_start_address;group:zeek_modbus;kind:integer;friendly:Starting address of the registers to read;help:Starting address of the registers to read
@@ -2186,9 +2178,9 @@ o_zeek_ldap=require:zeek.ldap;title:Zeek ldap.log;fields:zeek.ldap.message_id,ze
 o_zeek_ldap_search=require:zeek.ldap_search;title:Zeek ldap_search.log;fields:zeek.ldap_search.message_id,zeek.ldap_search.filter,zeek.ldap_search.attributes,zeek.ldap_search.scope,zeek.ldap_search.deref,zeek.ldap_search.base_object,zeek.ldap_search.result_count,zeek.ldap_search.result_code,zeek.ldap_search.result_message
 o_zeek_login=require:zeek.login;title:Zeek login.log;fields:zeek.login.client_user,zeek.login.confused,zeek.login.success
 o_zeek_modbus=require:zeek.modbus;title:Zeek modbus.log;fields:zeek.modbus.func,zeek.modbus.exception
-o_zeek_modbus_detailed=require:zeek.modbus_detailed;title:Zeek modbus_detailed.log;fields:zeek.modbus_detailed.unit_id,zeek.modbus_detailed.func,zeek.modbus_detailed.network_direction,zeek.modbus_detailed.address,zeek.modbus_detailed.quantity,zeek.modbus_detailed.values
-o_zeek_modbus_mask_write_register=require:zeek.modbus_mask_write_register;title:Zeek modbus_mask_write_register.log;fields:zeek.modbus_mask_write_register.unit_id,zeek.modbus_mask_write_register.func,zeek.modbus_mask_write_register.network_direction,zeek.modbus_mask_write_register.address,zeek.modbus_mask_write_register.and_mask,zeek.modbus_mask_write_register.or_mask
-o_zeek_modbus_read_write_multiple_registers=require:zeek.modbus_read_write_multiple_registers;title:Zeek modbus_read_write_multiple_registers.log;fields:zeek.modbus_read_write_multiple_registers.unit_id,zeek.modbus_read_write_multiple_registers.func,zeek.modbus_read_write_multiple_registers.network_direction,zeek.modbus_read_write_multiple_registers.write_start_address,zeek.modbus_read_write_multiple_registers.write_registers,zeek.modbus_read_write_multiple_registers.read_start_address,zeek.modbus_read_write_multiple_registers.read_quantity,zeek.modbus_read_write_multiple_registers.read_registers
+o_zeek_modbus_detailed=require:zeek.modbus_detailed;title:Zeek modbus_detailed.log;fields:zeek.modbus_detailed.unit_id,zeek.modbus.func,zeek.modbus_detailed.network_direction,zeek.modbus_detailed.address,zeek.modbus_detailed.quantity,zeek.modbus_detailed.values
+o_zeek_modbus_mask_write_register=require:zeek.modbus_mask_write_register;title:Zeek modbus_mask_write_register.log;fields:zeek.modbus_detailed.unit_id,zeek.modbus.func,zeek.modbus_detailed.network_direction,zeek.modbus_detailed.address,zeek.modbus_mask_write_register.and_mask,zeek.modbus_mask_write_register.or_mask
+o_zeek_modbus_read_write_multiple_registers=require:zeek.modbus_read_write_multiple_registers;title:Zeek modbus_read_write_multiple_registers.log;fields:zeek.modbus_detailed.unit_id,zeek.modbus.func,zeek.modbus_detailed.network_direction,zeek.modbus_read_write_multiple_registers.write_start_address,zeek.modbus_read_write_multiple_registers.write_registers,zeek.modbus_read_write_multiple_registers.read_start_address,zeek.modbus_read_write_multiple_registers.read_quantity,zeek.modbus_read_write_multiple_registers.read_registers
 o_zeek_mqtt_connect=require:zeek.mqtt_connect;title:Zeek mqtt_connect.log;fields:zeek.mqtt_connect.proto_name,zeek.mqtt_connect.proto_version,zeek.mqtt_connect.client_id,zeek.mqtt_connect.connect_status,zeek.mqtt_connect.will_topic,zeek.mqtt_connect.will_payload
 o_zeek_mqtt_publish=require:zeek.mqtt_publish;title:Zeek mqtt_publish.log;fields:zeek.mqtt_publish.from_client,zeek.mqtt_publish.retain,zeek.mqtt_publish.qos,zeek.mqtt_publish.status,zeek.mqtt_publish.topic,zeek.mqtt_publish.payload,zeek.mqtt_publish.payload_len,zeek.mqtt_publish.payload_dict.messageType
 o_zeek_mqtt_subscribe=require:zeek.mqtt_subscribe;title:Zeek mqtt_subscribe.log;fields:zeek.mqtt_subscribe.action,zeek.mqtt_subscribe.topics,zeek.mqtt_subscribe.qos_levels,zeek.mqtt_subscribe.granted_qos_level,zeek.mqtt_subscribe.ack
