--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -5318,6 +5318,25 @@ filter {
                split => { "[zeek][modbus_detailed][values]" => "," } }
     }
 
+    # rename a to make correlating modbus easier between logs
+    mutate {
+      id => "mutate_rename_modbus_detailed_fields"
+      rename => { "[zeek][modbus_detailed][func]" => "[zeek][modbus][func]" }
+    }
+
+  } else if ([log_source] == "modbus_mask_write_register") {
+    #############################################################################################################################
+    # modbus_mask_write_register.log specific logic
+
+    # rename a to make correlating modbus easier between logs
+    mutate {
+      id => "mutate_rename_modbus_mask_write_register_fields"
+      rename => { "[zeek][modbus_mask_write_register][network_direction]" => "[zeek][modbus_detailed][network_direction]" }
+      rename => { "[zeek][modbus_mask_write_register][unit_id]" => "[zeek][modbus_detailed][unit_id]" }
+      rename => { "[zeek][modbus_mask_write_register][address]" => "[zeek][modbus_detailed][address]" }
+      rename => { "[zeek][modbus_mask_write_register][func]" => "[zeek][modbus][func]" }
+    }
+
   } else if ([log_source] == "modbus_read_write_multiple_registers") {
     #############################################################################################################################
     # modbus_read_write_multiple_registers.log specific logic
@@ -5330,6 +5349,14 @@ filter {
     if ([zeek][modbus_read_write_multiple_registers][write_registers]) {
       mutate { id => "mutate_split_zeek_modbus_read_write_multiple_registers_write_registers"
                split => { "[zeek][modbus_read_write_multiple_registers][write_registers]" => "," } }
+    }
+
+    # rename a to make correlating modbus easier between logs
+    mutate {
+      id => "mutate_rename_modbus_read_write_multiple_registers_fields"
+      rename => { "[zeek][modbus_read_write_multiple_registers][network_direction]" => "[zeek][modbus_detailed][network_direction]" }
+      rename => { "[zeek][modbus_read_write_multiple_registers][unit_id]" => "[zeek][modbus_detailed][unit_id]" }
+      rename => { "[zeek][modbus_read_write_multiple_registers][func]" => "[zeek][modbus][func]" }
     }
 
   } else if ([log_source] == "mqtt_publish") {
