work in progress for more dashboards updates for assets

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -463,13 +463,14 @@ filter {
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
   #
-  # Enrich zeek conn.log, notice.log, weird.log, signatures.log, known*.log and all non-zeek data sources
+  # Enrich zeek conn.log, notice.log, weird.log, signatures.log, software.log, known*.log and all non-zeek data sources
 
   if (([event][provider] != "zeek") or
       ([event][dataset] == "conn") or
       ([event][dataset] == "notice") or
       ([event][dataset] == "weird") or
       ([event][dataset] == "signatures") or
+      ([event][dataset] == "software") or
       ([event][dataset] =~ /^known/)) {
     if ([source][ip]) and
        (([network][direction] == "internal") or ([network][direction] == "outbound")) {
@@ -555,6 +556,10 @@ filter {
                                                       merge => { "[related][service]" => "[source][device][service]" } } }
   if ([destination][device][service])      { mutate { id => "mutate_merge_destination_service_related"
                                                       merge => { "[related][service]" => "[destination][device][service]" } } }
+  if ([source][device][name])              { mutate { id => "mutate_merge_source_device_name_related"
+                                                      merge => { "[related][device_name]" => "[source][device][name]" } } }
+  if ([destination][device][name])         { mutate { id => "mutate_merge_destination_device_name_related"
+                                                      merge => { "[related][device_name]" => "[destination][device][name]" } } }
 
   ################################################################################################
 
