--- a/logstash/pipelines/enrichment/96_make_unique.conf
+++ b/logstash/pipelines/enrichment/96_make_unique.conf
@@ -98,6 +98,15 @@ filter {
       }
     }
   }
+  if ([related][device_name]) {
+    ruby {
+      id => "ruby_related_device_name_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][device_name]"
+      }
+    }
+  }
 
   # all users #################################################################
   if ([related][user]) {
