--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -116,6 +116,7 @@ network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Servi
 network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
 network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
 network.vlan.id=db:network.vlan.id;group:malcolm;kind:integer;friendly:VLAN ID;help:VLAN ID
+related.device_name=db:related.device_name;group:malcolm;kind:termfield;friendly:Related Device Name;help:Related Device Name
 related.device_type=db:related.device_type;group:malcolm;kind:termfield;friendly:Related Device Type;help:Related Device Type
 related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
 related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
@@ -2132,7 +2133,7 @@ n_netbox_device_originator=require:source.device.id;title:NetBox Device (Origina
 n_netbox_device_responder=require:destination.device.id;title:NetBox Device (Responder);fields:destination.device.cluster,destination.device.device_type,destination.device.id,destination.device.manufacturer,destination.device.name,destination.device.role,destination.device.service,destination.device.site,destination.device.url
 n_netbox_segment_originator=require:source.segment.id;title:NetBox Segment (Originator);fields:source.segment.id,source.segment.name,source.segment.site,source.segment.tenant,source.segment.url
 n_netbox_segment_responder=require:destination.segment.id;title:NetBox Segment (Responder);fields:destination.segment.id,destination.segment.name,destination.segment.site,destination.segment.tenant,destination.segment.url
-n_netbox_z_related=require:related.site;title:NetBox Related;fields:related.site,network.name,related.manufacturer,related.device_type,related.role,related.service
+n_netbox_z_related=require:related.site;title:NetBox Related;fields:related.site,network.name,related.manufacturer,related.device_type,related.role,related.device_name,related.service
 o_zeek_bacnet=require:zeek.bacnet;title:Zeek bacnet.log;fields:zeek.bacnet.bvlc_function,zeek.bacnet.pdu_type,zeek.bacnet.pdu_service,zeek.bacnet.invoke_id,zeek.bacnet.result_code
 o_zeek_bacnet_discovery=require:zeek.bacnet_discovery;title:Zeek bacnet_discovery.log;fields:zeek.bacnet_discovery.pdu_service,zeek.bacnet_discovery.object_type,zeek.bacnet_discovery.instance_number,zeek.bacnet_discovery.vendor,zeek.bacnet_discovery.range,zeek.bacnet_discovery.range_low,zeek.bacnet_discovery.range_high,zeek.bacnet_discovery.object_name
 o_zeek_bacnet_property=require:zeek.bacnet_property;title:Zeek bacnet_property.log;fields:zeek.bacnet_property.pdu_service,zeek.bacnet_property.object_type,zeek.bacnet_property.instance_number,zeek.bacnet_property.property,zeek.bacnet_property.array_index,zeek.bacnet_property.value
