load up some service templates by default on netbox start (see idaholab/Malcolm#133)

--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -39,6 +39,7 @@ command=/opt/netbox/venv/bin/python /usr/local/bin/netbox_init.py
   --token "%(ENV_SUPERUSER_API_TOKEN)s"
   --net-map /usr/local/share/net-map.json
   --library "%(ENV_NETBOX_DEVICETYPE_LIBRARY_PATH)s"
+  --service-template /etc/service-template-defaults.json
 autostart=true
 autorestart=false
 startsecs=0
