--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -39,7 +39,8 @@ command=/opt/netbox/venv/bin/python /usr/local/bin/netbox_init.py
   --token "%(ENV_SUPERUSER_API_TOKEN)s"
   --net-map /usr/local/share/net-map.json
   --library "%(ENV_NETBOX_DEVICETYPE_LIBRARY_PATH)s"
-  --service-template /etc/service-template-defaults.json
+  --service-templates /etc/service-template-defaults.json
+  --device-roles /etc/device-roles-defaults.json
 autostart=true
 autorestart=false
 startsecs=0
