work on updating opcua: almost certainly broken at the moment

--- a/logstash/pipelines/zeek/13_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/13_zeek_normalize.conf
@@ -1109,7 +1109,7 @@ filter {
 
   # FUIDs #############################################################################################################
   # collect all other FUIDs under parent [zeek][fuid] array (some were already done at the root level in
-  # the "rename" in 11_zeek_logs.conf)
+  # the "rename" in 12_zeek_mutate.conf)
 
   if ([zeek][files][parent_fuid])                { mutate { id => "mutate_merge_normalize_zeek_files_parent_fuid"
                                                            merge => { "[zeek][fuid]" => "[zeek][files][parent_fuid]" } } }
@@ -1203,7 +1203,7 @@ filter {
   if ([zeek][tftp][fname])                       { mutate { id => "mutate_merge_normalize_zeek_tftp_fname"
                                                            merge => { "[file][path]" => "[zeek][tftp][fname]" } } }
 
-  # as we already did a bunch of work parsing out smb.host, smb.share and smb.filename in 11_zeek_logs, use those here as well
+  # as we already did a bunch of work parsing out smb.host, smb.share and smb.filename in 12_zeek_mutate.conf, use those here as well
   # this should cover smb_files, smb_cmd and smb_mapping
   if [smb] {
     ruby {
