work on updating opcua: almost certainly (still) broken at the moment

--- a/logstash/pipelines/zeek/11_zeek_parse.conf
+++ b/logstash/pipelines/zeek/11_zeek_parse.conf
@@ -5042,20 +5042,15 @@ filter {
         add_tag => [ "ics" ]
       }
 
-  } else {
-
-    if ([log_source] =~ /\.\d{4}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}$/) {
+    } else if ([log_source] =~ /\.\d{4}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}$/) {
       # filebeat caught a file right in the middle of being renamed/moved
-      # (ie., renamed from conn.log to conn.2020-01-16-14-00-00.log or conn.2020_01_16_14_00_00.log).
-      # this has actually already been processed, so ignore this event.
-      drop { id => "drop_renamed_logfile" }
+      drop { id => "drop_renamed_logfile_opcua" }
 
     } else {
-      # some other unknown zeek log file. should start with ts at least!
+      # some other unknown zeek opcua- log file. should start with ts at least!
       csv {
-        id => "csv_zeek_unknown"
-        columns => [
-          "ts"]
+        id => "csv_zeek_unknown_opcua"
+        columns => ["ts"]
 
         # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
         separator => "	"
@@ -5065,9 +5060,38 @@ filter {
         target => "[zeek_cols]"
       }
 
-      mutate { id => "mutate_add_tag_zeek_unknown"
-               add_tag => [ "_unknown_log_type" ] }
+      mutate { id => "mutate_add_tag_zeek_unknown_opcua"
+               add_field => {
+                 "[zeek_cols][proto]" => "tcp"
+                 "[zeek_cols][service]" => "opcua-binary"
+               }
+               add_tag => [ "_unknown_log_type" ]
+      }
+
+    } # if / else if for opcua log types
+
+  } else if ([log_source] =~ /\.\d{4}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}[_:-]?\d{2}$/) {
+      # filebeat caught a file right in the middle of being renamed/moved
+      # (ie., renamed from conn.log to conn.2020-01-16-14-00-00.log or conn.2020_01_16_14_00_00.log).
+      # this has actually already been processed, so ignore this event.
+      drop { id => "drop_renamed_logfile" }
+
+  } else {
+    # some other unknown zeek log file. should start with ts at least!
+    csv {
+      id => "csv_zeek_unknown"
+      columns => ["ts"]
+
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      separator => "	"
+      # there's no way to *disable* the csv quote char, so set it to something we'll never see
+      quote_char => ""
+
+      target => "[zeek_cols]"
     }
+
+    mutate { id => "mutate_add_tag_zeek_unknown"
+             add_tag => [ "_unknown_log_type" ] }
 
   } # if / else if for source type (conn.log, dns.log, etc.)
 
