improvements to opcua parsing

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -1372,8 +1372,8 @@ zeek.opcua_binary_variant_array_dims.dimension=db:zeek.opcua_binary_variant_arra
 # opcua_binary_variant_data.log
 # https://github.com/cisagov/icsnpp-opcua-binary
 zeek.opcua_binary_variant_data.variant_data_link_id=db:zeek.opcua_binary_variant_data.variant_data_link_id;group:zeek_opcua;kind:termfield;friendly:variant_data_link_id;help:variant_data_link_id
-zeek.opcua_binary_variant_data.variant_data_value_signed_numeric=db:zeek.opcua_binary_variant_data.variant_data_value_signed_numeric;group:zeek_opcua;kind:integer;friendly:variant_data_value_signed_numeric;help:variant_data_value_signed_numeric
-zeek.opcua_binary_variant_data.variant_data_value_unsigned_numeric=db:zeek.opcua_binary_variant_data.variant_data_value_unsigned_numeric;group:zeek_opcua;kind:integer;friendly:variant_data_value_unsigned_numeric;help:variant_data_value_unsigned_numeric
+zeek.opcua_binary_variant_data.variant_data_value_signed_numeric=db:zeek.opcua_binary_variant_data.variant_data_value_signed_numeric;group:zeek_opcua;kind:termfield;friendly:variant_data_value_signed_numeric;help:variant_data_value_signed_numeric
+zeek.opcua_binary_variant_data.variant_data_value_unsigned_numeric=db:zeek.opcua_binary_variant_data.variant_data_value_unsigned_numeric;group:zeek_opcua;kind:termfield;friendly:variant_data_value_unsigned_numeric;help:variant_data_value_unsigned_numeric
 zeek.opcua_binary_variant_data.variant_data_value_string=db:zeek.opcua_binary_variant_data.variant_data_value_string;group:zeek_opcua;kind:termfield;friendly:variant_data_value_string;help:variant_data_value_string
 zeek.opcua_binary_variant_data.variant_data_node_id_encoding_mask=db:zeek.opcua_binary_variant_data.variant_data_node_id_encoding_mask;group:zeek_opcua;kind:termfield;friendly:variant_data_node_id_encoding_mask;help:variant_data_node_id_encoding_mask
 zeek.opcua_binary_variant_data.variant_data_node_id_namespace_idx=db:zeek.opcua_binary_variant_data.variant_data_node_id_namespace_idx;group:zeek_opcua;kind:termfield;friendly:variant_data_node_id_namespace_idx;help:variant_data_node_id_namespace_idx
