more improvements to opcua binary (thanks @piercema)

--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -1,3 +1,5 @@
+# Copyright (c) 2023 Battelle Energy Alliance, LLC.  All rights reserved.
+
 filter {
 
   if ([zeek_cols]) {
@@ -1289,37 +1291,60 @@ filter {
     #   I identified these from the the icsnpp-opcua-binary scripts source code with something like
     #   > grep -R '&log' | grep -Pi "\s*#.+$"
 
-#    mutate {
-#      id => "mutate_rename_opcua_linkage_fields"
-#      rename => { "[zeek][opcua_binary][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
-#      rename => { "[zeek][opcua_binary_activate_session][activate_session_diag_info_link_id]" => "[zeek][opcua_binary_activate_session_diagnostic_info][activate_session_diag_info_link_id]" }
-#      rename => { "[zeek][opcua_binary_activate_session][client_software_cert_link_id]" => "[zeek][opcua_binary_activate_session_client_software_cert][client_software_cert_link_id]" }
-#      rename => { "[zeek][opcua_binary_activate_session][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-#      rename => { "[zeek][opcua_binary_activate_session][locale_link_id]" => "[zeek][opcua_binary_activate_session_locale_id][locale_link_id]" }
-#      rename => { "[zeek][opcua_binary_activate_session][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
-#      rename => { "[zeek][opcua_binary_activate_session_diagnostic_info][diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse][browse_description_link_id]" => "[zeek][opcua_binary_browse_description][browse_description_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse][browse_diag_info_link_id]" => "[zeek][opcua_binary_browse_diagnostic_info][browse_diag_info_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse][browse_next_link_id]" => "[zeek][opcua_binary_browse_request_continuation_point][browse_next_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse][browse_response_link_id]" => "[zeek][opcua_binary_browse_result][browse_response_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse_diagnostic_info][diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse_result][browse_reference_link_id]" => "[zeek][opcua_binary_browse_response_references][browse_reference_link_id]" }
-#      rename => { "[zeek][opcua_binary_browse_result][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
-#      rename => { "[zeek][opcua_binary_create_session][discovery_profile_link_id]" => "[zeek][opcua_binary_create_session_discovery][discovery_profile_link_id]" }
-#      rename => { "[zeek][opcua_binary_create_session][endpoint_link_id]" => "[zeek][opcua_binary_create_session_endpoints][endpoint_link_id]" }
-#      rename => { "[zeek][opcua_binary_create_session][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-#      rename => { "[zeek][opcua_binary_create_session_endpoints][user_token_link_id]" => "[zeek][opcua_binary_create_session_user_token][user_token_link_id]" }
-#      rename => { "[zeek][opcua_binary_create_session_endpoints][discovery_profile_link_id]" => "[zeek][opcua_binary_create_session_discovery][discovery_profile_link_id]" }
-#      rename => { "[zeek][opcua_binary_create_subscription][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-#      rename => { "[zeek][opcua_binary_get_endpoints][endpoint_description_link_id]" => "[zeek][opcua_binary_get_endpoints_description][endpoint_description_link_id]" }
-#      rename => { "[zeek][opcua_binary_get_endpoints][locale_link_id]" => "[zeek][opcua_binary_get_endpoints_locale_id][locale_link_id]" }
-#      rename => { "[zeek][opcua_binary_get_endpoints][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-#      rename => { "[zeek][opcua_binary_get_endpoints][profile_uri_link_id]" => "[zeek][opcua_binary_get_endpoints_profile_uri][profile_uri_link_id]" }
-#      rename => { "[zeek][opcua_binary_get_endpoints_description][discovery_profile_link_id]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_link_id]" }
-#      rename => { "[zeek][opcua_binary_get_endpoints_description][user_token_link_id]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_link_id]" }
-#      rename => { "[zeek][opcua_binary_opensecure_channel][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
-#    }
+    mutate {
+      id => "mutate_rename_opcua_linkage_fields"
+      rename => { "[zeek][opcua_binary][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_activate_session][activate_session_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_activate_session][client_software_cert_link_id]" => "[zeek][opcua_binary_activate_session_client_software_cert][client_software_cert_link_id]" }
+      rename => { "[zeek][opcua_binary_activate_session][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_activate_session][opcua_locale_link_id]" => "[zeek][opcua_binary_activate_session_locale_id][opcua_locale_link_id]" }
+      rename => { "[zeek][opcua_binary_activate_session][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_browse][browse_description_link_id]" => "[zeek][opcua_binary_browse_description][browse_description_link_id]" }
+      rename => { "[zeek][opcua_binary_browse][browse_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_browse][browse_next_link_id]" => "[zeek][opcua_binary_browse_request_continuation_point][browse_next_link_id]" }
+      rename => { "[zeek][opcua_binary_browse][browse_response_link_id]" => "[zeek][opcua_binary_browse_result][browse_response_link_id]" }
+      rename => { "[zeek][opcua_binary_browse][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_browse_result][browse_reference_link_id]" => "[zeek][opcua_binary_browse_response_references][browse_reference_link_id]" }
+      rename => { "[zeek][opcua_binary_browse_result][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_create_monitored_items][create_item_link_id]" => "[zeek][opcua_binary_create_monitored_items_create_item][create_item_link_id]" }
+      rename => { "[zeek][opcua_binary_create_monitored_items][create_monitored_items_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_create_monitored_items][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_create_monitored_items_create_item][monitoring_parameters_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_create_session][discovery_profile_link_id]" => "[zeek][opcua_binary_create_session_discovery][discovery_profile_link_id]" }
+      rename => { "[zeek][opcua_binary_create_session][endpoint_link_id]" => "[zeek][opcua_binary_create_session_endpoints][endpoint_link_id]" }
+      rename => { "[zeek][opcua_binary_create_session][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_create_session_endpoints][discovery_profile_link_id]" => "[zeek][opcua_binary_create_session_discovery][discovery_profile_link_id]" }
+      rename => { "[zeek][opcua_binary_create_session_endpoints][user_token_link_id]" => "[zeek][opcua_binary_create_session_user_token][user_token_link_id]" }
+      rename => { "[zeek][opcua_binary_create_subscription][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_get_endpoints][endpoint_description_link_id]" => "[zeek][opcua_binary_get_endpoints_description][endpoint_description_link_id]" }
+      rename => { "[zeek][opcua_binary_get_endpoints][locale_link_id]" => "[zeek][opcua_binary_get_endpoints_locale_id][locale_link_id]" }
+      rename => { "[zeek][opcua_binary_get_endpoints][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_get_endpoints][profile_uri_link_id]" => "[zeek][opcua_binary_get_endpoints_profile_uri][profile_uri_link_id]" }
+      rename => { "[zeek][opcua_binary_get_endpoints_description][discovery_profile_link_id]" => "[zeek][opcua_binary_get_endpoints_discovery][discovery_profile_link_id]" }
+      rename => { "[zeek][opcua_binary_get_endpoints_description][user_token_link_id]" => "[zeek][opcua_binary_get_endpoints_user_token][user_token_link_id]" }
+      rename => { "[zeek][opcua_binary_opensecure_channel][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_read][diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_read][nodes_to_read_link_id]" => "[zeek][opcua_binary_read_nodes_to_read][nodes_to_read_link_id]" }
+      rename => { "[zeek][opcua_binary_read][opcua_link_id]" => "[zeek][opcua_binary][opcua_link_id]" }
+      rename => { "[zeek][opcua_binary_read][read_results_link_id]" => "[zeek][opcua_binary_read_results][results_link_id]" }
+      rename => { "[zeek][opcua_binary_read_results][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_read_results][read_results_variant_metadata_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data][variant_metadata_data_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data_value][variant_metadata_link_id]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter_literal_operand][literal_operand_variant_link]" => "[zeek][opcua_binary][variant_source_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data][variant_data_diag_info_link_id]" => "[zeek][opcua_binary_diag_info_detail][diag_info_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data][variant_data_ext_obj_link_id]" => "[zeek][opcua_binary_variant_extension_object][ext_obj_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data][variant_data_status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_data][variant_data_value_link_id]" => "[zeek][opcua_binary_variant_data_value][variant_data_value_source_link]" }
+      rename => { "[zeek][opcua_binary_variant_data_value][status_code_link_id]" => "[zeek][opcua_binary_status_code_detail][status_code_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_array_multi_dim_link_id]" => "[zeek][opcua_binary_variant_array_dims][array_dim_link_id]" }
+      rename => { "[zeek][opcua_binary_variant_metadata][variant_data_link_id]" => "[zeek][opcua_binary_variant_data][variant_data_link_id]" }
+      rename => { "[zeek][opcua_binary_aggregate_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
+      rename => { "[zeek][opcua_binary_create_monitored_items_create_item][filter_info_details_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
+      rename => { "[zeek][opcua_binary_data_change_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
+      rename => { "[zeek][opcua_binary_event_filter][monitored_parameters_link_id]" => "[zeek][opcua_binary][filter_source_link_id]" }
+    }
 
     # count the number of contributing "log types" after we've renamed stuff
     ruby {
