--- a/logstash/pipelines/zeek/13_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/13_zeek_normalize.conf
@@ -1,3 +1,5 @@
+# Copyright (c) 2023 Battelle Energy Alliance, LLC.  All rights reserved.
+
 filter {
 
   # Zeek intel indicators depending on indicator type #################################################################
