--- a/logstash/pipelines/zeek/14_zeek_convert.conf
+++ b/logstash/pipelines/zeek/14_zeek_convert.conf
@@ -1,3 +1,5 @@
+# Copyright (c) 2023 Battelle Energy Alliance, LLC.  All rights reserved.
+
 filter {
 
   # set data types for fields that belong to various zeek logs
