--- a/logstash/pipelines/zeek/10_zeek_prep.conf
+++ b/logstash/pipelines/zeek/10_zeek_prep.conf
@@ -1,3 +1,5 @@
+# Copyright (c) 2023 Battelle Energy Alliance, LLC.  All rights reserved.
+
 filter {
 
   if (([message] =~ /^#/) or (![log][file][path])) {
